# exfatprogs

./: .gitignore  Makefile.am  TODO.md  configure.ac
resize/: Makefile.am  resize.c
tests/: test_resize.sh
